Abarth-EVO e Audi s8

--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -101,6 +101,56 @@
                     </div>
                 </div>
 
+                <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Abarth Punto EVO</h3>
+                    <h3 class="font-semibold mb-5">Punto Evo 1.4 16v t. m.air s</h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/1.jpg" alt="Abarth Punto EVO">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/2.jpg" alt="Abarth Punto EVO"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/3.jpg" alt="Abarth Punto EVO"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/4.jpg" alt="Abarth Punto EVO"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/5.jpg" alt="Abarth Punto EVO"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/6.jpg" alt="Abarth Punto EVO"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/7.jpg" alt="Abarth Punto EVO"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 2010<br>
+                    <a class="font-semibold">Cilindrata:</a> 1400 cc <br>
+                    <a class="font-semibold">Potenza:</a> 268 CV<br>
+                    <a class="font-semibold">Euro:</a> 5<br>
+                    <a class="font-semibold">Carburante:</a> Benzina <br>
+                    <a class="font-semibold">Chilometraggio:</a> 210.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 14.600€<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Autovettura stage 3 preparata da Elaborazioni
+                        Taglienti. Motore e cambio hanno all'attivo 30000 km. Modulo Multiair sostituito nuovo in data
+                        16/01/2024, assetto bilstein, molle eibach, scarico completo ragazzon con finale artigianale,
+                        cerchi japan racing da 17" doppio canale anteriore e posteriore. Tutti i ricambi originali sono
+                        disponibili ad eccezione dei cerchi. <br>
+
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button
+                                onclick="window.location.href='https://www.autoscout24.it/annunci/mercedes-benz-s-600-serie-w220-v12-lunga-benzina-blu-azzurro-831ab019-2cf2-40f7-a65b-6b902e410149?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                class="pulsante text-center">Vai all'annuncio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Mercedes-Benz S 600</h3>
@@ -202,6 +252,55 @@
                     </div>
                 </div>
 
+                <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Audi S8</h3>
+                    <h3 class="font-semibold mb-5">4.2 Quattro Tip. </h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/1.jpg" alt="Audi S8">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/2.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/3.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/4.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/5.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/6.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/7.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Audi-S8/8.jpg" alt="Audi S8"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 1998<br>
+                    <a class="font-semibold">Cilindrata:</a> 4200 cc <br>
+                    <a class="font-semibold">Potenza:</a> 250 KW (340 CV)<br>
+                    <a class="font-semibold">Euro:</a> 0<br>
+                    <a class="font-semibold">Carburante:</a> Benzina <br>
+                    <a class="font-semibold">Chilometraggio:</a> 200.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 14.600€<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Autovettura in condizioni eccelse, 2 proprietari da
+                        nuova di cui l’ultimo da 22 anni, regolarmente tagliandata rete in ufficiale Audi Bonaldi,
+                        chiavi doppie e libretto tagliandi presenti, già certificata asi <br>
+
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button
+                                onclick="window.location.href='https://www.autoscout24.it/annunci/mercedes-benz-s-600-serie-w220-v12-lunga-benzina-blu-azzurro-831ab019-2cf2-40f7-a65b-6b902e410149?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                class="pulsante text-center">Vai all'annuncio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
+                        </div>
+                    </div>
+                </div>
 
         </section>
 
