--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -33,6 +33,66 @@
 
 
                 <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Toyota Yaris</h3>
+                    <h3 class="font-semibold mb-5">GR Yaris 1.6 Circuit </h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/1.jpg" alt="Yaris GR">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/2.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/3.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/4.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/5.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/6.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/7.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/8.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/9.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/10.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/11.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/12.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 2022<br>
+                    <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
+                    <a class="font-semibold">Potenza:</a> 192 KW (261 CV)<br>
+                    <a class="font-semibold">Euro:</a> 6<br>
+                    <a class="font-semibold">Carburante:</a> Benzina <br>
+                    <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 40.000€<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia e
+                        ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno 04/2024,
+                        condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%. Vettura
+                        in pronta consegna; bollo e superbollo appena pagati.
+                        <br>
+
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button
+                                onclick="window.location.href='https://www.autoscout24.it/annunci/mercedes-benz-s-600-serie-w220-v12-lunga-benzina-blu-azzurro-831ab019-2cf2-40f7-a65b-6b902e410149?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                class="pulsante text-center">Vai all'annuncio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
                     <h3 class="font-semibold mb-5">3p 2.0 16v RS Luxe 200cv</h3>
                     <div class="image-container" data-current-index="0">
