--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -69,19 +69,22 @@
                     <a class="font-semibold">Carburante:</a> Benzina <br>
                     <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
                     <a class="font-semibold">Neopatentati:</a> No<br>
-                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 40.000€<br></a>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 39.900€<br></a>
                     <button class="show-more mt-5 mb-4">Mostra di più</button>
                     <div style="display: none;">
-                        <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia e
-                        ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno 04/2024,
-                        condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%. Vettura
+                        <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia
+                        e
+                        ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno
+                        04/2024,
+                        condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%.
+                        Vettura
                         in pronta consegna; bollo e superbollo appena pagati.
                         <br>
 
 
                         <div class="flex w-full place-content-center mt-4">
                             <button
-                                onclick="window.location.href='https://www.autoscout24.it/annunci/mercedes-benz-s-600-serie-w220-v12-lunga-benzina-blu-azzurro-831ab019-2cf2-40f7-a65b-6b902e410149?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                onclick="window.location.href='https://www.autoscout24.it/annunci/toyota-yaris-gr-yaris-1-6-circuit-benzina-nero-40cfd03c-c477-4eac-9e66-27217f6591fb?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
                                 class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
