--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -401,6 +401,62 @@
                     </div>
                 </div>
 
+                <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
+                    <h3 class="font-semibold mb-5">5p 1.6 tdi Sport Edition</h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/1.jpg" alt="VW Golf 6">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/2.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/3.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/4.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/5.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/6.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/7.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/8.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/9.jpg" alt="VW Golf 6"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 2012<br>
+                    <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
+                    <a class="font-semibold">Potenza:</a> 77 KW (105 CV)<br>
+                    <a class="font-semibold">Euro:</a> 6<br>
+                    <a class="font-semibold">Carburante:</a> Diesel <br>
+                    <a class="font-semibold">Chilometraggio:</a> 288.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 5.800€<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Vettura in perfetto stato d’uso e regolarmente
+                        manutenzionata in ogni particolare dai freni alla frizione e volano, gruppo distribuzione, tutto
+                        già sostituito, unico proprietario, libretto tagliandi, fatture chiavi triple tutto a corredo,
+                        disponibile doppio treno di cerchi e gomme invernali, appena lucidata e igienizzata.
+
+
+                        <br>
+
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button
+                                onclick="window.location.href='https://www.autoscout24.it/annunci/volkswagen-golf-5p-1-6-tdi-sport-edition-diesel-bianco-27e2feda-b4eb-4db9-8f76-46982acfa450?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                class="pulsante text-center">Vai all'annuncio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
+                        </div>
+                    </div>
+                </div>
+
         </section>
 
         <div class="flex flex w-full place-content-center">
