--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -439,14 +439,62 @@
                         manutenzionata in ogni particolare dai freni alla frizione e volano, gruppo distribuzione, tutto
                         già sostituito, unico proprietario, libretto tagliandi, fatture chiavi triple tutto a corredo,
                         disponibile doppio treno di cerchi e gomme invernali, appena lucidata e igienizzata.
-
-
                         <br>
 
 
                         <div class="flex w-full place-content-center mt-4">
                             <button
                                 onclick="window.location.href='https://www.autoscout24.it/annunci/volkswagen-golf-5p-1-6-tdi-sport-edition-diesel-bianco-27e2feda-b4eb-4db9-8f76-46982acfa450?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                class="pulsante text-center">Vai all'annuncio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
+                    <h3 class="font-semibold mb-5">5p 2.0 tdi Sportline 6 Marce</h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/1.jpg" alt="VW Golf 5">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/2.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/3.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/4.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/5.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/6.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/7.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 2005<br>
+                    <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
+                    <a class="font-semibold">Potenza:</a> 103 KW (140 CV)<br>
+                    <a class="font-semibold">Euro:</a> 4<br>
+                    <a class="font-semibold">Carburante:</a> Diesel <br>
+                    <a class="font-semibold">Chilometraggio:</a> 250.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 4.600€<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Vettura in ottime condizioni, chilometri tagliandati,
+                        gomme e cerchi da 17” appena sostituiti, frizione e volano sostituiti, cinghia distribuzione e
+                        pompa acqua sostituiti, olio e filtri eseguiti maggio 2024, chiavi doppie e libretto tagliandi
+                        presenti.
+                        <br>
+
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button
+                                onclick="window.location.href='https://www.autoscout24.it/annunci/volkswagen-golf-5p-2-0-tdi-sportline-6-marce-diesel-argento-3016c8be-802c-4a44-adab-376fc275a467?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
                                 class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
