--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header p-5 flex justify-between items-center bg-[#0f1d75]">
         <a href="index.html">
-            <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
+            <img class="h-16 ml-2 logo-stondato" src="./assets/images/logoz.png" alt="AutoTomasoni">
         </a>
         <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
         <nav id="menu" class="hidden md:flex flex-row gap-5 text-slate-100 font-semibold">
