--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
             </a>
             <div class="menu-icon mr-2" onclick="toggleMenu()">&#9776;</div>
-    
+
         </div>
         <nav id="menu" class="hidden md:flex flex-row text-slate-100 font-semibold">
             <a class="navboxes md:text-2xl pr-0 lg:pr-[30px]" href="#chi-siamo">Chi Siamo</a>
@@ -133,62 +133,52 @@
                 <h2 class="text-4xl font-bold mb-4">Auto in vendita</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3">
 
-
                     <div class="h-fit autovendita">
-                        <h3 class="text-2xl font-bold">Renault Clio</h3>
-                        <h3 class="font-semibold mb-5">3p 2.0 16v RS Luxe 200cv</h3>
+                        <h3 class="text-2xl font-bold">Abarth Punto EVO</h3>
+                        <h3 class="font-semibold mb-5">Punto Evo 1.4 16v t. m.air s</h3>
                         <div class="image-container" data-current-index="0">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/1.jpg"
-                                alt="Renault Clio RS">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/2.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/3.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/4.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/5.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/6.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/7.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/8.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/9.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/10.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/11.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/12.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/13.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/14.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/15.jpg"
-                                alt="Renault Clio RS" style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/16.jpg"
-                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/1.jpg"
+                                alt="Abarth Punto EVO">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/2.jpg"
+                                alt="Abarth Punto EVO" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/3.jpg"
+                                alt="Abarth Punto EVO" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/4.jpg"
+                                alt="Abarth Punto EVO" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/5.jpg"
+                                alt="Abarth Punto EVO" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/6.jpg"
+                                alt="Abarth Punto EVO" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Abarth-EVO/7.jpg"
+                                alt="Abarth Punto EVO" style="display: none;">
                             <button class="prev" onclick="prevImage(this)">&#10094;</button>
                             <button class="next" onclick="nextImage(this)">&#10095;</button>
                         </div>
-                        <a class="font-semibold">Anno:</a> 2007<br>
-                        <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
-                        <a class="font-semibold">Potenza:</a> 145 KW (197 CV)<br>
-                        <a class="font-semibold">Euro:</a> <br>
+                        <a class="font-semibold">Anno:</a> 2010<br>
+                        <a class="font-semibold">Cilindrata:</a> 1400 cc <br>
+                        <a class="font-semibold">Potenza:</a> 268 CV<br>
+                        <a class="font-semibold">Euro:</a> 5<br>
                         <a class="font-semibold">Carburante:</a> Benzina <br>
-                        <a class="font-semibold">Chilometraggio:</a> 160.000 Km<br>
+                        <a class="font-semibold">Chilometraggio:</a> 210.000 Km<br>
                         <a class="font-semibold">Neopatentati:</a> No<br>
-                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 14.000€<br></a>
-
+                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 13.600€<br></a>
                         <button class="show-more mt-5 mb-4">Mostra di più</button>
                         <div style="display: none;">
-                            <a class="font-semibold">Descrizione:</a> Clio Rs unico proprietario in ottime condizioni.
-                            Fanali posteriori a led, cerchi e gomme nuove, aspirazione diretta, batteria spostata
-                            dietro, scarico completo, assetto, dischi forati, cambio ravvicinato, volante nuovo e
-                            manometri pressione olio e temperatura olio aggiuntivi. Auto perfetta per divertirsi nei
-                            track day. <br>
+                            <a class="font-semibold">Descrizione:</a> Autovettura stage 3 preparata da Elaborazioni
+                            Taglienti. Motore e cambio hanno all'attivo 30000 km. Modulo Multiair sostituito nuovo in
+                            data
+                            16/01/2024, assetto bilstein, molle eibach, scarico completo ragazzon con finale
+                            artigianale,
+                            cerchi japan racing da 17" doppio canale anteriore e posteriore. Tutti i ricambi originali
+                            sono
+                            disponibili ad eccezione dei cerchi. <br>
+
+
+                            <div class="flex w-full place-content-center mt-4">
+                                <button
+                                    onclick="window.location.href='https://www.autoscout24.it/annunci/abarth-punto-evo-punto-evo-1-4-16v-t-m-air-s-elaborata-benzina-grigio-b6ef5166-42ba-4ef3-9044-daaf9b4d6773?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
+                                    class="pulsante text-center">Vai all'annuncio completo</button>
+                            </div>
 
                             <div class="flex w-full place-content-center mt-4">
                                 <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
@@ -196,8 +186,6 @@
                             </div>
                         </div>
                     </div>
-
-
 
                     <div class="h-fit autovendita">
                         <h3 class="text-2xl font-bold">Mercedes-Benz S 600</h3>
@@ -242,8 +230,6 @@
                             </div>
                         </div>
                     </div>
-
-
 
                     <div class="h-fit autovendita">
                         <h3 class="text-2xl font-bold">Toyota Yaris</h3>
