--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -283,53 +283,59 @@
 
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
-                    <h3 class="font-semibold mb-5">2.0 16V RS Renault Sport Fase 2 ASI</h3>
+                    <h3 class="font-semibold mb-5">3p 2.0 16v RS Luxe 200cv</h3>
                     <div class="image-container" data-current-index="0">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/1.jpg"
-                            alt="Renault Clio Rs 16v">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/2.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/3.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/4.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/5.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/6.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/7.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/8.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/9.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/10.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Renault-Clio-Rs-16v/11.jpg"
-                            alt="Renault Clio Rs 16v" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/1.jpg"
+                            alt="Renault Clio RS">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/2.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/3.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/4.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/5.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/6.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/7.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/8.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/9.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/10.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/11.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/12.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/13.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/14.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/15.jpg"
+                            alt="Renault Clio RS" style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/16.jpg"
+                            alt="Renault Clio RS" style="display: none;">
                         <button class="prev" onclick="prevImage(this)">&#10094;</button>
                         <button class="next" onclick="nextImage(this)">&#10095;</button>
                     </div>
-                    <a class="font-semibold">Anno:</a> 2001<br>
+                    <a class="font-semibold">Anno:</a> 2007<br>
                     <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
-                    <a class="font-semibold">Potenza:</a> 124 KW (172 CV)<br>
-                    <a class="font-semibold">Euro:</a> 3<br>
+                    <a class="font-semibold">Potenza:</a> 145 KW (197 CV)<br>
+                    <a class="font-semibold">Euro:</a> <br>
                     <a class="font-semibold">Carburante:</a> Benzina <br>
                     <a class="font-semibold">Chilometraggio:</a> 160.000 Km<br>
                     <a class="font-semibold">Neopatentati:</a> No<br>
-                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 13.000€<br></a>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 14.000€<br></a>
+
                     <button class="show-more mt-5 mb-4">Mostra di più</button>
                     <div style="display: none;">
-                        <a class="font-semibold">Descrizione:</a> Vettura in condizioni eccelse, parabrezza originale, 2
-                        proprietari, originalissima al 100%, nessuna modifica, libretto tagliandi con tutte le fatture
-                        di manutenzione Renault Service, targhe e libretto originali chiavi doppie. Auto iscritta ASI.
-                        <br>
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button
-                                onclick="window.location.href='https://www.autoscout24.it/annunci/renault-clio-2-0-16v-rs-renault-sport-fase-2-asi-benzina-argento-e2673ade-4cee-4e90-92c6-a3c366694f55?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
-                                class="pulsante text-center">Vai all'annuncio completo</button>
-                        </div>
+                        <a class="font-semibold">Descrizione:</a> Clio Rs unico proprietario in ottime condizioni.
+                        Fanali posteriori a led, cerchi e gomme nuove, aspirazione diretta, batteria spostata
+                        dietro, scarico completo, assetto, dischi forati, cambio ravvicinato, volante nuovo e
+                        manometri pressione olio e temperatura olio aggiuntivi. Auto perfetta per divertirsi nei
+                        track day. <br>
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
