--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Tomasoni</title>
     <link rel="stylesheet" href="./assets/styles.css">
-    <link rel="icon" href="./assets/images/logotitle.png">
+    <link rel="icon" href="./assets/images/logotitle1.png">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -14,7 +14,7 @@
     <header class="header lg:flex justify-between items-center bg-[#0f1d75]">
         <div class="flex justify-between items-center p-5">
             <a href="index.html">
-                <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
+                <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo1.png" alt="AutoTomasoni">
             </a>
             <div class="menu-icon mr-2" onclick="toggleMenu()">&#9776;</div>
 
