--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header lg:flex justify-between items-center bg-[#0f1d75]">
+    <header class="header lg:flex justify-between items-center bg-[#1d1d1d]">
         <div class="flex justify-between items-center p-5">
             <a href="index.html">
                 <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo1.png" alt="AutoTomasoni">
