--- a/index.html
+++ b/index.html
@@ -362,7 +362,8 @@
             riservati</p>
         </div>
 
-        <div class="text-center small-text mb-10">Website created by BiancoGabry</div>
+        <div class="text-center small-text">Website created by BiancoGabry</div>
+        <div class="text-center small-text mb-10">Images, logos and colors by Chiara</div>
     </div>
     <script src="./assets/script.js"></script>
 </body>
