--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <div id="loading-screen">
+        <img src="./assets/images/logo.png" alt="Logo Autotomasoni" id="loading-logo">
+    </div>
+
     <header class="header lg:flex justify-between items-center bg-[#1d1d1d]">
         <div class="flex justify-between items-center p-5">
             <a href="index.html">
