--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <div id="loading-screen">
+        <img src="./assets/images/logo.png" alt="Logo Autotomasoni" id="loading-logo">
+    </div>
+
     <header class="header p-5 flex justify-between items-center bg-[#1d1d1d]">
         <a href="index.html">
             <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
