--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="loading-screen">
-        <img src="./assets/images/logo.png" alt="Logo Autotomasoni" id="loading-logo">
+        <img src="./assets/images/schermatacaricamento.png" alt="Logo Autotomasoni" id="loading-logo">
     </div>
 
     <header class="header lg:flex justify-between items-center bg-[#1d1d1d]">
