--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -16,16 +16,19 @@
         <img src="./assets/images/schermatacaricamento.png" alt="Logo Autotomasoni" id="loading-logo">
     </div>
 
-    <header class="header p-5 flex justify-between items-center bg-[#1d1d1d]">
-        <a href="index.html">
-            <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
-        </a>
-        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-        <nav id="menu" class="hidden md:flex flex-row gap-5 text-slate-100 font-semibold">
-            <a class="navboxes md:text-2xl" href="index.html#chi-siamo">Chi Siamo</a>
-            <a class="navboxes md:text-2xl" href="index.html#servizi">Servizi</a>
-            <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamo</a>
-            <a class="navboxes md:text-2xl" href="#contatti">Contatti</a>
+    <header class="header lg:flex justify-between items-center bg-[#1d1d1d]">
+        <div class="flex justify-between items-center p-5">
+            <a href="index.html">
+                <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
+            </a>
+            <div class="menu-icon mr-2" onclick="toggleMenu()">&#9776;</div>
+
+        </div>
+        <nav id="menu" class="hidden md:flex flex-row text-slate-100 font-semibold">
+            <a class="navboxes md:text-2xl pr-0 lg:pr-[30px]" href="index.html#chi-siamo">Chi Siamo</a>
+            <a class="navboxes md:text-2xl pr-0 lg:pr-[30px]" href="index.html#servizi">Servizi</a>
+            <a class="navboxes md:text-2xl pr-0 lg:pr-[30px]" href="#dove-siamo">Dove siamo</a>
+            <a class="navboxes md:text-2xl pr-0 lg:pr-[30px]" href="#contatti">Contatti</a>
         </nav>
     </header>
 
