--- a/index.html
+++ b/index.html
@@ -367,6 +367,9 @@
             riservati</p>
         </div>
 
+        <div class="text-center mb-5">Sede legale: Via LOMBARDIA 8 - 24022 - ALZANO LOMBARDO (BG)</p>
+        </div>
+
         <div class="text-center small-text">Website created by BiancoGabry</div>
         <div class="text-center small-text mb-10">Images, logos and colors by Chiara</div>
     </div>
