--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -520,8 +520,12 @@
         riservati</p>
     </div>
 
-    <div class="text-center small-text mb-10">Website created by BiancoGabry</div>
+    <div class="text-center mb-5">Sede legale: Via LOMBARDIA 8 - 24022 - ALZANO LOMBARDO (BG)</p>
+    </div>
 
+    <div class="text-center small-text">Website created by BiancoGabry</div>
+    <div class="text-center small-text mb-10">Images, logos and colors by Chiara</div>
+    </div>
     <script src="./assets/scriptvendita.js"></script>
 </body>
 
