Fix tabella fondo auto vendita

--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -481,7 +481,7 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-    <div class="contentvendita flex flex-col gap-8 p-8">
+    <div class="content flex flex-col gap-8 p-8">
         <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2">
             <div class="tabellafondo">
                 <div id="contatti" class="contact">
@@ -504,8 +504,8 @@
             </div>
             <div class="tabellafondo items-center">
                 <div id="footer" class="footer">
-                    <h1 class="text-2xl font-semibold mb-8">Orari di apertura</h1>
-                    <p class="mb-10">
+                    <h1 class="text-3xl font-semibold mb-8">Orari di apertura</h1>
+                    <p class="mb-10 text-2xl">
                         <a class="font-semibold">Lun - Ven:</a> 8:30 - 12:30, 14:00 - 19:00<br>
                         <a class="font-semibold">Sabato:</a> 8:30 - 12:30<br>
                         <a class="font-semibold">Domenica:</a> Chiuso<br>
