--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -77,7 +77,7 @@
                     <a class="font-semibold">Carburante:</a> Benzina <br>
                     <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
                     <a class="font-semibold">Neopatentati:</a> No<br>
-                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 39.900€<br></a>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
                     <button class="show-more mt-5 mb-4">Mostra di più</button>
                     <div style="display: none;">
                         <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia
