--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 </div>
             </section>
 
+
             <section id="auto">
                 <h2 class="text-4xl font-bold mb-4">Auto in vendita</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3">
@@ -300,7 +301,6 @@
                     </div>
 
                 </div>
-
             </section>
 
             <div class="flex w-full place-content-center">
@@ -314,6 +314,143 @@
                     class="pulsante text-center">Seguici sul nostro profilo AutoScout24!</button>
             </div>
 
+            <section id="auto">
+                <h2 class="text-4xl font-bold mb-4">Auto vendute</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3">
+
+                    <div class="h-fit autovendita">
+                        <h3 class="text-2xl font-bold">Toyota Yaris</h3>
+                        <h3 class="font-semibold mb-5">GR Yaris 1.6 Circuit </h3>
+                        <div class="image-container" data-current-index="0">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/1.jpg" alt="Yaris GR">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/2.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/3.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/4.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/5.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/6.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/7.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/8.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/9.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/10.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/11.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/12.jpg" alt="Yaris GR"
+                                style="display: none;">
+                            <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                            <button class="next" onclick="nextImage(this)">&#10095;</button>
+                        </div>
+                        <a class="font-semibold">Anno:</a> 2022<br>
+                        <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
+                        <a class="font-semibold">Potenza:</a> 192 KW (261 CV)<br>
+                        <a class="font-semibold">Euro:</a> 6<br>
+                        <a class="font-semibold">Carburante:</a> Benzina <br>
+                        <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
+                        <a class="font-semibold">Neopatentati:</a> No<br>
+                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
+                        <button class="show-more mt-5 mb-4">Mostra di più</button>
+                        <div style="display: none;">
+                            <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia
+                            e
+                            ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno
+                            04/2024,
+                            condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%.
+                            Vettura
+                            in pronta consegna; bollo e superbollo appena pagati.
+                            <br>
+
+                        </div>
+                    </div>
+
+                    <div class="h-fit autovendita">
+                        <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
+                        <h3 class="font-semibold mb-5">5p 2.0 tdi Sportline 6 Marce</h3>
+                        <div class="image-container" data-current-index="0">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/1.jpg" alt="VW Golf 5">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/2.jpg" alt="VW Golf 5"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/3.jpg" alt="VW Golf 5"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/4.jpg" alt="VW Golf 5"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/5.jpg" alt="VW Golf 5"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/6.jpg" alt="VW Golf 5"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/7.jpg" alt="VW Golf 5"
+                                style="display: none;">
+                            <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                            <button class="next" onclick="nextImage(this)">&#10095;</button>
+                        </div>
+                        <a class="font-semibold">Anno:</a> 2005<br>
+                        <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
+                        <a class="font-semibold">Potenza:</a> 103 KW (140 CV)<br>
+                        <a class="font-semibold">Euro:</a> 4<br>
+                        <a class="font-semibold">Carburante:</a> Diesel <br>
+                        <a class="font-semibold">Chilometraggio:</a> 250.000 Km<br>
+                        <a class="font-semibold">Neopatentati:</a> No<br>
+                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
+                        <button class="show-more mt-5 mb-4">Mostra di più</button>
+                        <div style="display: none;">
+                            <a class="font-semibold">Descrizione:</a> Vettura in ottime condizioni, chilometri tagliandati,
+                            gomme e cerchi da 17” appena sostituiti, frizione e volano sostituiti, cinghia distribuzione e
+                            pompa acqua sostituiti, olio e filtri eseguiti maggio 2024, chiavi doppie e libretto tagliandi
+                            presenti.
+                            <br>
+                        </div>
+                    </div>
+
+                    <div class="h-fit autovendita">
+                        <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
+                        <h3 class="font-semibold mb-5">5p 1.6 tdi Sport Edition</h3>
+                        <div class="image-container" data-current-index="0">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/1.jpg" alt="VW Golf 6">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/2.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/3.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/4.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/5.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/6.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/7.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/8.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-6/9.jpg" alt="VW Golf 6"
+                                style="display: none;">
+                            <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                            <button class="next" onclick="nextImage(this)">&#10095;</button>
+                        </div>
+                        <a class="font-semibold">Anno:</a> 2012<br>
+                        <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
+                        <a class="font-semibold">Potenza:</a> 77 KW (105 CV)<br>
+                        <a class="font-semibold">Euro:</a> 6<br>
+                        <a class="font-semibold">Carburante:</a> Diesel <br>
+                        <a class="font-semibold">Chilometraggio:</a> 288.000 Km<br>
+                        <a class="font-semibold">Neopatentati:</a> No<br>
+                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
+                        <button class="show-more mt-5 mb-4">Mostra di più</button>
+                        <div style="display: none;">
+                            <a class="font-semibold">Descrizione:</a> Vettura in perfetto stato d’uso e regolarmente
+                            manutenzionata in ogni particolare dai freni alla frizione e volano, gruppo distribuzione, tutto
+                            già sostituito, unico proprietario, libretto tagliandi, fatture chiavi triple tutto a corredo,
+                            disponibile doppio treno di cerchi e gomme invernali, appena lucidata e igienizzata.
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
 
 
