--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -39,70 +39,6 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
 
-
-                <div class="h-fit autovendita">
-                    <h3 class="text-2xl font-bold">Toyota Yaris</h3>
-                    <h3 class="font-semibold mb-5">GR Yaris 1.6 Circuit </h3>
-                    <div class="image-container" data-current-index="0">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/1.jpg" alt="Yaris GR">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/2.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/3.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/4.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/5.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/6.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/7.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/8.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/9.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/10.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/11.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/12.jpg" alt="Yaris GR"
-                            style="display: none;">
-                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
-                        <button class="next" onclick="nextImage(this)">&#10095;</button>
-                    </div>
-                    <a class="font-semibold">Anno:</a> 2022<br>
-                    <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
-                    <a class="font-semibold">Potenza:</a> 192 KW (261 CV)<br>
-                    <a class="font-semibold">Euro:</a> 6<br>
-                    <a class="font-semibold">Carburante:</a> Benzina <br>
-                    <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
-                    <a class="font-semibold">Neopatentati:</a> No<br>
-                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
-                    <button class="show-more mt-5 mb-4">Mostra di più</button>
-                    <div style="display: none;">
-                        <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia
-                        e
-                        ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno
-                        04/2024,
-                        condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%.
-                        Vettura
-                        in pronta consegna; bollo e superbollo appena pagati.
-                        <br>
-
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button
-                                onclick="window.location.href='https://www.autoscout24.it/annunci/toyota-yaris-gr-yaris-1-6-circuit-benzina-nero-40cfd03c-c477-4eac-9e66-27217f6591fb?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
-                                class="pulsante text-center">Vai all'annuncio completo</button>
-                        </div>
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
-                                maggiori informazioni</button>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Abarth Punto EVO</h3>
                     <h3 class="font-semibold mb-5">Punto Evo 1.4 16v t. m.air s</h3>
@@ -352,6 +288,113 @@
                     </div>
                 </div>
 
+        </section>
+
+        <div class="flex flex w-full place-content-center">
+            <button onclick="window.location.href='index.html#auto';" class="pulsante text-center text-2xl">Ritorna alla
+                pagina iniziale</button>
+        </div>
+
+        <div class="flex w-full place-content-center">
+            <button onclick="window.location.href='https://www.autoscout24.it/concessionari/automobili-tomasoni';"
+                class="pulsante text-center">Seguici sul nostro profilo AutoScout24!</button>
+        </div>
+
+
+        <section id="auto">
+            <h2 class="text-4xl font-bold mb-4">Auto vendute</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3">
+
+                <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Toyota Yaris</h3>
+                    <h3 class="font-semibold mb-5">GR Yaris 1.6 Circuit </h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/1.jpg" alt="Yaris GR">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/2.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/3.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/4.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/5.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/6.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/7.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/8.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/9.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/10.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/11.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/12.jpg" alt="Yaris GR"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 2022<br>
+                    <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
+                    <a class="font-semibold">Potenza:</a> 192 KW (261 CV)<br>
+                    <a class="font-semibold">Euro:</a> 6<br>
+                    <a class="font-semibold">Carburante:</a> Benzina <br>
+                    <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia
+                        e
+                        ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno
+                        04/2024,
+                        condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%.
+                        Vettura
+                        in pronta consegna; bollo e superbollo appena pagati.
+                        <br>
+
+                    </div>
+                </div>
+
+                <div class="h-fit autovendita">
+                    <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
+                    <h3 class="font-semibold mb-5">5p 2.0 tdi Sportline 6 Marce</h3>
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/1.jpg" alt="VW Golf 5">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/2.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/3.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/4.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/5.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/6.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/7.jpg" alt="VW Golf 5"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
+                    <a class="font-semibold">Anno:</a> 2005<br>
+                    <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
+                    <a class="font-semibold">Potenza:</a> 103 KW (140 CV)<br>
+                    <a class="font-semibold">Euro:</a> 4<br>
+                    <a class="font-semibold">Carburante:</a> Diesel <br>
+                    <a class="font-semibold">Chilometraggio:</a> 250.000 Km<br>
+                    <a class="font-semibold">Neopatentati:</a> No<br>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
+                    <button class="show-more mt-5 mb-4">Mostra di più</button>
+                    <div style="display: none;">
+                        <a class="font-semibold">Descrizione:</a> Vettura in ottime condizioni, chilometri tagliandati,
+                        gomme e cerchi da 17” appena sostituiti, frizione e volano sostituiti, cinghia distribuzione e
+                        pompa acqua sostituiti, olio e filtri eseguiti maggio 2024, chiavi doppie e libretto tagliandi
+                        presenti.
+                        <br>
+                    </div>
+                </div>
+
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
                     <h3 class="font-semibold mb-5">5p 1.6 tdi Sport Edition</h3>
@@ -383,7 +426,7 @@
                     <a class="font-semibold">Carburante:</a> Diesel <br>
                     <a class="font-semibold">Chilometraggio:</a> 288.000 Km<br>
                     <a class="font-semibold">Neopatentati:</a> No<br>
-                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 5.800€<br></a>
+                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
                     <button class="show-more mt-5 mb-4">Mostra di più</button>
                     <div style="display: none;">
                         <a class="font-semibold">Descrizione:</a> Vettura in perfetto stato d’uso e regolarmente
@@ -391,85 +434,12 @@
                         già sostituito, unico proprietario, libretto tagliandi, fatture chiavi triple tutto a corredo,
                         disponibile doppio treno di cerchi e gomme invernali, appena lucidata e igienizzata.
                         <br>
-
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button
-                                onclick="window.location.href='https://www.autoscout24.it/annunci/volkswagen-golf-5p-1-6-tdi-sport-edition-diesel-bianco-27e2feda-b4eb-4db9-8f76-46982acfa450?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
-                                class="pulsante text-center">Vai all'annuncio completo</button>
-                        </div>
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
-                                maggiori informazioni</button>
-                        </div>
                     </div>
                 </div>
 
-                <div class="h-fit autovendita">
-                    <h3 class="text-2xl font-bold">Volkswagen Golf</h3>
-                    <h3 class="font-semibold mb-5">5p 2.0 tdi Sportline 6 Marce</h3>
-                    <div class="image-container" data-current-index="0">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/1.jpg" alt="VW Golf 5">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/2.jpg" alt="VW Golf 5"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/3.jpg" alt="VW Golf 5"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/4.jpg" alt="VW Golf 5"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/5.jpg" alt="VW Golf 5"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/6.jpg" alt="VW Golf 5"
-                            style="display: none;">
-                        <img class="immaginevendita mb-5" src="./assets/images/VW-Golf-5/7.jpg" alt="VW Golf 5"
-                            style="display: none;">
-                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
-                        <button class="next" onclick="nextImage(this)">&#10095;</button>
-                    </div>
-                    <a class="font-semibold">Anno:</a> 2005<br>
-                    <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
-                    <a class="font-semibold">Potenza:</a> 103 KW (140 CV)<br>
-                    <a class="font-semibold">Euro:</a> 4<br>
-                    <a class="font-semibold">Carburante:</a> Diesel <br>
-                    <a class="font-semibold">Chilometraggio:</a> 250.000 Km<br>
-                    <a class="font-semibold">Neopatentati:</a> No<br>
-                    <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 4.600€<br></a>
-                    <button class="show-more mt-5 mb-4">Mostra di più</button>
-                    <div style="display: none;">
-                        <a class="font-semibold">Descrizione:</a> Vettura in ottime condizioni, chilometri tagliandati,
-                        gomme e cerchi da 17” appena sostituiti, frizione e volano sostituiti, cinghia distribuzione e
-                        pompa acqua sostituiti, olio e filtri eseguiti maggio 2024, chiavi doppie e libretto tagliandi
-                        presenti.
-                        <br>
-
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button
-                                onclick="window.location.href='https://www.autoscout24.it/annunci/volkswagen-golf-5p-2-0-tdi-sportline-6-marce-diesel-argento-3016c8be-802c-4a44-adab-376fc275a467?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
-                                class="pulsante text-center">Vai all'annuncio completo</button>
-                        </div>
-
-                        <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
-                                maggiori informazioni</button>
-                        </div>
-                    </div>
-                </div>
-
+            </div>
         </section>
-
-        <div class="flex flex w-full place-content-center">
-            <button onclick="window.location.href='index.html#auto';" class="pulsante text-center text-2xl">Ritorna alla
-                pagina iniziale</button>
-        </div>
-
-        <div class="flex w-full place-content-center">
-            <button onclick="window.location.href='https://www.autoscout24.it/concessionari/automobili-tomasoni';"
-                class="pulsante text-center">Seguici sul nostro profilo AutoScout24!</button>
-        </div>
-
     </div>
-
 
     <section id="dove-siamo">
         <div class="contentvendita flex flex-col gap-8 p-8">
